== 1.0.1 / 3-19-09
 * Typo in runner [FIXED]

== 1.0.0 / 3-19-09
 * First release