@@ -1,0 +1,8 @@
+[
+{
+  constant: Sinatra
+},
+{
+  constant: Rails
+}
+]
