@@ -1,3 +1,6 @@
+== HEAD / DATE
+ * Suppression file support [NEW]
+
 == 1.0.1 / 3-19-09
  * Typo in runner [FIXED]
 
